@@ -50,6 +50,8 @@
                 - The JavaScript component 'creme.ActivityCalendar' has been improved :
                     - The property 'rendererDelay' (number) has been added; Improve performances by limiting the calls
                       to the rendering methods. (see https://fullcalendar.io/docs/rerenderDelay)
+            * Assistants :
+                - Some fields 'creation_date' & 'modification_date' have been added in models.
 
     Breaking changes :
     ------------------
